|Enhancement
|The `buildfed` tool is enhanced to set properties from the content of a specified file.

A new `-F NAME:FILE` command line parameter is introduced.

Example:

  $ buildfed ... -F description:config/description.txt

This will define a new property `description` which is populated from the content of the `description.txt` file.
|===

== Version 0.10.0
[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/30[#30]
|Enhancement
|New property "source" for fields and certificates to specify the source for the values or passwords.

The are following advantages:

  * Easy extensibility for new sources (e.g. environment variables).
  * Easier to find missing configurations (search for `"value": null` or `"password": null`).

*Environmentalized Fields*

For field values there are separate properties ("property" and "value") to configure the field value (see example below).

.Old Format
[source,json]
----
{
  "field#0" {
    "property": null, <1>
    "type": "string", 
    "used": true, 
    "value": null <2>
  }
}
----
<1> specifies a property as the source of the field value
<2> literal field value

A new property "source" is introduced to specify the source of the field value.
The property defines the kind of the "value" property.
In case of "source" is equal to "value" the field value is directly configured by the value of the "value" property.
In case of "source" is equal to "property" the field value is retrieved from the property named by the "value" property.

.New Format
[source,json]
----
{
  "field#0": {
    "source": "property", <1>
    "type": "string",
    "used": true,
    "value": "property.name" <2>
  },
  "field#1": {
    "source": "value", <3>
    "type": "string",
    "used": true,
    "value": "field value" <4>
  }
}
----
<1> specifies a property as the source of a field value
<2> field value is retrieved from the property named `property.name`