@@ -99,7 +99,8 @@ icon:folder[] server-archive.axsar <1>
   icon:folder[] staticFiles <3>
   icon:file[] gateway.pol <4>
   icon:file[] gateway.env <5>
-  icon:file[] readme-server-archive.txt <6>
+  icon:file[] gateway.info.json <6>
+  icon:file[] readme-server-archive.txt <7>
 ----
 <1> Generated server archive.
 <2> Folder containing dependent JARs.
@@ -108,7 +109,30 @@ The files are copied from the `staticFiles` folders of all dependent policy arch
 <4> Packed `.pol` archive containing the server configuration and polices (including policies of all dependent policy archives)
 <5> `.env` file containing all environment specific information.
 The environment is not configured and should be treated as environment independent.
-<6> Generated readme file describing the content of the archive (e.g. version of dependent policy archives)
+<6> JSON document describing the content of the archive (e.g. version and dependencies)
+<7> Generated readme file describing the content of the archive (e.g. version of dependent policy archives)
+
+*`gateway.info.json` File*
+
+The artifact information file describes the content of the server archive as a JSON document.
+It contains information about the deployment archive itself the dependencies.
+
+[source,json]
+----
+{
+  "id" : "com.example:hello-world-gw:axway-server-archive:0.1.0-SNAPSHOT",
+  "name" : "Hello World Server",
+  "description" : "My first \"Hello World\" server project.",
+  "buildTime" : "2019-12-17T17:25:40",
+  "artifact" : {
+    "groupID" : "com.example",
+    "artifactID" : "hello-world-gw",
+    "version" : "0.1.0-SNAPSHOT"
+  },
+  "dependencies" : [ "com.example:hello-world:axway-policy-archive:0.1.0-SNAPSHOT" ]
+}
+----
+
 
 === Deployment Project
 Deployment projects are used to configure API gateways for specific environments or groups based on an environment independent server project.
@@ -138,10 +162,9 @@ icon:folder[] deploy-archive.axdar <1>
   icon:folder[] lib <2>
   icon:folder[] staticFiles <3>
   icon:file[] gateway.fed <4>
-  icon:file[] gateway.pol <5>
-  icon:file[] gateway.env <6>
-  icon:file[] readme-deployment-archive.txt <7>
-  icon:file[] readme-server-archive.txt <8>
+  icon:file[] gateway.info.json <5>
+  icon:file[] readme-deployment-archive.txt <6>
+  icon:file[] readme-server-archive.txt <7>
 ----
 <1> Generated server archive.
 <2> Folder containing dependent JARs.
@@ -149,12 +172,43 @@ icon:folder[] deploy-archive.axdar <1>
 The files are copied from the `staticFiles` folders of all dependent policy archives.
 <4> Configured `.fed` file.
 It is environment specific and contains all configured certificates and environmentalized fields.
-<5> Packed `.pol` archive containing the server configuration and polices (including policies of all dependent policy archives)
-<6> Configured `.env` file containing all environment specific information.
-All certificates and environmentalized fields are replace by configured values.
-<7> Generated readme file describing the content of the archive (e.g. version of depnednt server archive).
-<8> Generated readme file describing the content of the archive (e.g. version of dependent policy archives).
+<5> JSON document describing the content of the archive (e.g. version and dependencies)
+<6> Generated readme file describing the content of the archive (e.g. version of dependent server archive).
+<7> Generated readme file describing the content of the archive (e.g. version of dependent policy archives).
 Copied from server archive.
+
+*`gateway.info.json` File*
+
+The artifact information file describes the content of the deployment archive as a JSON document.
+It contains information about the deployment archive itself and about the based server archive.
+
+[source,json]
+----
+{
+  "id" : "com.example:hello-world-dev:axway-deployment-archive:0.1.0-SNAPSHOT",
+  "name" : "Hello World (DEV)",
+  "description" : null,
+  "buildTime" : "2019-12-17T17:25:40",
+  "artifact" : {
+    "groupID" : "com.example",
+    "artifactID" : "hello-world-dev",
+    "version" : "0.1.0-SNAPSHOT"
+  },
+  "dependencies" : [ "com.example:hello-world-gw:axway-server-archive:0.1.0-SNAPSHOT" ],
+  "serverArchive" : {
+    "id" : "com.example:hello-world-gw:axway-server-archive:0.1.0-SNAPSHOT",
+    "name" : "Hello World Server",
+    "description" : "My first \"Hello World\" server project.",
+    "buildTime" : "2019-12-17T17:25:40",
+    "artifact" : {
+      "groupID" : "com.example",
+      "artifactID" : "hello-world-gw",
+      "version" : "0.1.0-SNAPSHOT"
+    },
+    "dependencies" : [ "com.example:hello-world:axway-policy-archive:0.1.0-SNAPSHOT" ]
+  }
+}
+----
 
 == Build Properties
 
